@@ -100,12 +100,13 @@ if (isset ($_POST["updatebt"])) {
 	}
 }
 
-echo "<h2>Pandora SNMP &gt; " . __('SNMP console');
-if ($config["pure"] == 1) {
-	echo '&nbsp;<a target="_top" href="'.$url.'&pure=1&refr=30"><img src="images/monitor.png" title="'.__('Normal screen').'" /></a>';
+echo "<h2>" . __('SNMP console');
+
+if ($config["pure"]) {
+	echo '&nbsp;<a target="_top" href="'.$url.'&pure=0&refr=30"><img src="images/monitor.png" title="'.__('Normal screen').'" /></a>';
 } else {
 	// Fullscreen
-	echo '&nbsp;<a target="_top" href="'.$url.'&pure=0&refr=0"><img src="images/monitor.png" title="'.__('Full screen').'" /></a>';
+	echo '&nbsp;<a target="_top" href="'.$url.'&pure=1&refr=0"><img src="images/monitor.png" title="'.__('Full screen').'" /></a>';
 }
 echo "</h2>";
 
